--- a/week-2/02-nodejs/package.json
+++ b/week-2/02-nodejs/package.json
@@ -19,6 +19,7 @@
     "testTimeout": 10000
   },
   "dependencies": {
+    "02-nodejs": "file:",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   }
