--- a/week-3/01-middlewares/package.json
+++ b/week-3/01-middlewares/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "01-middlewares": "file:",
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.3"
