--- a/week-3/02-jwt/package.json
+++ b/week-3/02-jwt/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "02-jwt": "file:",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
   }
